--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,17 @@
        android:hint="Skriv text här:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
+
         />
+    <ImageView
+
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="120dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@color/colorAccent" />
     <Button
         android:id="@+id/knapp"
         android:layout_width="match_parent"
@@ -35,7 +45,6 @@
         android:layout_marginBottom="20dp"
 
         />
-
 
 
 
